--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- sidebar section -->
         <aside class="sidebar-section">
             <div  class="sidebar-photo">
-                <img src="./img/myPhoto.JPG" alt="my photo" width="350">
+                <img src="./img/myPhoto.webp" alt="my photo" width="350">
             </div>
             <!-- contacts section -->
             <div class="contacts-section">
