--- a/index.html
+++ b/index.html
@@ -24,39 +24,18 @@
                 <!-- <p class="about-me-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
                 </p> -->
-                <h3 class="main-content-title">GOAL</h3>
-                <p>I’m looking for interesting job as front-end developer in friendly, thriving, and
-                exciting company to develop my skills as well as grove with a team.</p>
-                <h3 class="main-content-title">Langueges</h3>
-                <ol class="my-knowledge-languages-list">
-                    <li class="my-language-item">
-                        <span class="my-language-text">
-                            Ukrainian 
-                            ................
-                            <span class="my-language-bracket">[</span> C2 <span class="my-language-bracket">]</span>
-                        </span>
-                    </li>
-                    <li class="my-language-item">
-                        <span class="my-language-text">
-                           Russian
-                            ....................
-                            <span class="my-language-bracket">[</span> C2 <span class="my-language-bracket">]</span>
-                        </span>
-                    </li>
-                    <li class="my-language-item">
-                        <span class="my-language-text">
-                           English
-                            .....................
-                            <span class="my-language-bracket">[</span> B1 <span class="my-language-bracket">]</span>
-                        </span>
-                    </li>
+                <h3 class="main-content-title">Summary</h3>
+                <p>I am looking for an interesting job as a front-end developer in a friendly, prosperous and interesting company to
+                develop my skills, as well as work in a team, I have already worked in a team and created projects that are from below,
+                I am well versed in HTML/CSS/Node.js</p>
+                
             </div>
 
             <!-- my projects section -->
             <div class="my-projects-section">
-                <h3 class="main-content-title">Projects</h3>
-                <ol class="my-projects-list">
+                <h3 class="main-content-title">Projects experience:</h3>
                     <li class="my-projects-item">
+                        <span>Project name:</span>
                         <span class="my-projects-text">
                             <a href="https://alex-stupak.github.io/goit-markup-hw-08/" target="_blank" class="my-projects-link">WebStudio
                             </a>
@@ -64,7 +43,10 @@
                             <span class="my-projects-bracket">[</span> HTML5, CSS3 <span class="my-projects-bracket">]</span>
                         </span>
                     </li>
+                    <span class="my-projects-name">Project link &#129045; : <a href="https://github.com/Alex-Stupak/goit-markup-hw-08" class="my-projects-link">Click</a></span>
+                    <h4 class="my-project-h">Technologies: <span class="my-projects-text">Made it myself, the essence of a business problem solving site</span></h4>
                     <li class="my-projects-item">
+                        <span>Project name:</span>
                         <span class="my-projects-text">
                             <a href="https://m0h4x.github.io/team-proj-demo/" target="_blank" class="my-projects-link">Icecream shop
                             </a>
@@ -72,7 +54,10 @@
                             <span class="my-projects-bracket">[</span> HTML5, CSS3 <span class="my-projects-bracket">]</span>
                         </span>
                     </li>
-                    <li class="my-projects-item">
+                <span class="my-projects-name">Project link &#129045; : <a href="https://github.com/m0h4x/team-proj-demo" class="my-projects-link">Click</a></span>
+                <h4 class="my-project-h">Technologies: <span class="my-projects-text">My role was a Web developer, the essence of the site for creating ice cream and selling it</span></h4>
+                <li class="my-projects-item">
+                        <span>Project name:</span>
                         <span class="my-projects-text">
                             <a href="https://pavlolevchenko.github.io/Filmoteka/" target="_blank" class="my-projects-link">Filmoteka
                             </a>
@@ -80,8 +65,9 @@
                             <span class="my-projects-bracket">[</span> HTML5, CSS3 ,JS <span class="my-projects-bracket">]</span>
                         </span>
                     </li>
-                </ol>
-            </div>
+                    <span class="my-projects-name">Project link &#129045; : <a href="https://github.com/PavloLevchenko/Filmoteka" class="my-projects-link">Click</a></span>
+                    <h4 class="my-project-h">Technologies: <span class="my-projects-text">My role was a scrum master, the essence of the site is watching movies, their rating, votes, library</span></h4>
+                </div>
 
             <!-- my work experience section  -->
             <div class="my-work-experience-section">
@@ -89,14 +75,15 @@
                 
                 <!-- company 3 -->
                 <div class="my-work-experience-company-block">
-                    <h4 class="my-work-experience-position">Front-End Developer <span class="my-work-experience-company">GoIT academy</span></h4>
+                    <h4>Don't have </h4>
+                    <!--<h4 class="my-work-experience-position">Front-End Developer <span class="my-work-experience-company">GoIT academy</span></h4>
                     <p class="my-work-experience-period">July 2021 - up to now <span class="my-work-experience-divider">|</span> Ukraine</p>
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-dutuy">Work on a project with parallel learning.</li>
                         <li class="my-work-experience-dutuy">Teamwork.</li>
                         <li class="my-work-experience-dutuy">Work with HTML, CSS, SASS, JS.</li>
                         <li class="my-work-experience-dutuy">After the courses (01.05.22) I will be able to work with React JS, Node.js and React Native </li>
-                        <!-- <li class="my-work-experience-dutuy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> -->
+                        <li class="my-work-experience-dutuy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> -->
                     </ul>
                 </div>  
             </div>
@@ -104,13 +91,13 @@
             <!-- my education section -->
             <div class="my-education-sactions">
                 <h3 class="main-content-title">Education</h3>
-                <div class="education-border">
+                <div>
                     <h4 class="my-education-name">GoIT academy</h4>
                     <h5 class="my-education-faculty">Full stack online</h5>
                     <p class="my-education-period">July 2021 - up to now <span class="my-education-divider">|</span> Ukraine</p>
                 </div>
 
-                <div class="education-border">
+                <div>
                     <h4 class="my-education-name">University of State Fiscal Service of Ukraine</h4>
                     <h5 class="my-education-faculty">Accounting and taxation</h5>
                     <p class="my-education-period">September 2020 - up to now <span class="my-education-divider">|</span> Ukraine</p>
@@ -127,17 +114,17 @@
             <div class="contacts-section">
                 <h3 class="sidebar-title">Contacts</h3>
                 <div>
-                    <span class="contacts-section-type">C:</span>
                     <a class="contacts-section-link" href="tel:+380673178203">+380 97 707 28 19</a>
                 </div>
                 <div>
-                    <span class="contacts-section-type">E:</span>
                     <a class="contacts-section-link" href="mailto:stupak-alex931@ukr.net">stupak-alex931@ukr.net
 </a>
                 </div>
                 <div>
-                    <span class="contacts-section-type">L:</span>
                     <a class="contacts-section-link" href="https://www.linkedin.com/in/stupak-alex/">Linkedin</a>
+                </div>
+                <div>
+                    <a class="contacts-section-link" href="https://www.linkedin.com/in/stupak-alex/">GitHub</a>
                 </div>
             </div>
 
@@ -159,12 +146,39 @@
             <div class="soft-skills-section">
                 <h3 class="sidebar-title">Soft Skills</h3>
                 <ul class="skills-list">
-                    <li class="skills-item"> <span class="skills-item-text">Scrum</span> </li>
-                    <li class="skills-item"> <span class="skills-item-text">Agile</span> </li>
-                    <li class="skills-item"> <span class="skills-item-text">Responsibility</span> </li>
+                    <li class="skills-item"> <span class="skills-item-text">Eager to learn</span> </li>
+                    <li class="skills-item"> <span class="skills-item-text">Honest</span> </li>
+                    <li class="skills-item"> <span class="skills-item-text">Ability to work under pressure
+</span> </li>
                     <li class="skills-item"> <span class="skills-item-text">Communication</span> </li>
-                    <!-- <li class="skills-item"> <span class="skills-item-text">GTD</span> </li>
-                    <li class="skills-item"> <span class="skills-item-text">Teamwork</span> </li> -->
+                    <li class="skills-item"> <span class="skills-item-text">Calm</span> </li>
+                    <li class="skills-item"> <span class="skills-item-text">Conscientious</span> </li> 
+                </ul>
+            </div>
+            <div class="my-language-section">
+            <h3 class="sidebar-title">Langueges skills:</h3>
+            <ul class="skills-list">
+                <li class="skills-item">
+                    <span class="skills-item-text">
+                        Ukrainian
+                        ................
+                        <span class="my-language-bracket">[</span> C2 <span class="my-language-bracket">]</span>
+                    </span>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-text">
+                        Russian
+                        ....................
+                        <span class="my-language-bracket">[</span> C2 <span class="my-language-bracket">]</span>
+                    </span>
+                </li>
+                <li class="skills-item">
+                    <span class="skills-item-text">
+                        English
+                        .....................
+                        <span class="my-language-bracket">[</span> B1 <span class="my-language-bracket">]</span>
+                    </span>
+                </li>
                 </ul>
             </div>
         </aside>
