--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             <div class="my-projects-section">
                 <h3 class="main-content-title">Projects experience:</h3>
                     <li class="my-projects-item">
-                        <span>Project name:</span>
                         <span class="my-projects-text">
                             <a href="https://alex-stupak.github.io/goit-markup-hw-08/" target="_blank" class="my-projects-link">WebStudio
                             </a>
@@ -43,10 +42,10 @@
                             <span class="my-projects-bracket">[</span> HTML5, CSS3 <span class="my-projects-bracket">]</span>
                         </span>
                     </li>
-                    <span class="my-projects-name">Project link &#129045; : <a href="https://github.com/Alex-Stupak/goit-markup-hw-08" class="my-projects-link">Click</a></span>
-                    <h4 class="my-project-h">Technologies: <span class="my-projects-text">Made it myself, the essence of a business problem solving site</span></h4>
+                    <span class="my-projects-name">GitHub &#10140;
+ : <a href="https://github.com/Alex-Stupak/goit-markup-hw-08" class="my-projects-link">Click</a></span>
+                    <h4 class="my-project-h"> <span class="my-projects-text">Made it myself, the essence of a business problem solving site</span></h4>
                     <li class="my-projects-item">
-                        <span>Project name:</span>
                         <span class="my-projects-text">
                             <a href="https://m0h4x.github.io/team-proj-demo/" target="_blank" class="my-projects-link">Icecream shop
                             </a>
@@ -54,10 +53,10 @@
                             <span class="my-projects-bracket">[</span> HTML5, CSS3 <span class="my-projects-bracket">]</span>
                         </span>
                     </li>
-                <span class="my-projects-name">Project link &#129045; : <a href="https://github.com/m0h4x/team-proj-demo" class="my-projects-link">Click</a></span>
-                <h4 class="my-project-h">Technologies: <span class="my-projects-text">My role was a Web developer, the essence of the site for creating ice cream and selling it</span></h4>
+                <span class="my-projects-name">GitHub &#10140;
+ : <a href="https://github.com/m0h4x/team-proj-demo" class="my-projects-link">Click</a></span>
+                <h4 class="my-project-h"><span class="my-projects-text">My role was a Web developer, the essence of the site for creating ice cream and selling it</span></h4>
                 <li class="my-projects-item">
-                        <span>Project name:</span>
                         <span class="my-projects-text">
                             <a href="https://pavlolevchenko.github.io/Filmoteka/" target="_blank" class="my-projects-link">Filmoteka
                             </a>
@@ -65,18 +64,19 @@
                             <span class="my-projects-bracket">[</span> HTML5, CSS3 ,JS <span class="my-projects-bracket">]</span>
                         </span>
                     </li>
-                    <span class="my-projects-name">Project link &#129045; : <a href="https://github.com/PavloLevchenko/Filmoteka" class="my-projects-link">Click</a></span>
-                    <h4 class="my-project-h">Technologies: <span class="my-projects-text">My role was a scrum master, the essence of the site is watching movies, their rating, votes, library</span></h4>
+                    <span class="my-projects-name">GitHub &#10140;
+ : <a href="https://github.com/PavloLevchenko/Filmoteka" class="my-projects-link">Click</a></span>
+                    <h4 class="my-project-h"><span class="my-projects-text">My role was a scrum master, the essence of the site is watching movies, their rating, votes, library</span></h4>
                 </div>
 
             <!-- my work experience section  -->
-            <div class="my-work-experience-section">
+            <!--<div class="my-work-experience-section">
                 <h3 class="main-content-title">Work Experience</h3>
                 
-                <!-- company 3 -->
+                 company 3 
                 <div class="my-work-experience-company-block">
                     <h4>Don't have </h4>
-                    <!--<h4 class="my-work-experience-position">Front-End Developer <span class="my-work-experience-company">GoIT academy</span></h4>
+                    <h4 class="my-work-experience-position">Front-End Developer <span class="my-work-experience-company">GoIT academy</span></h4>
                     <p class="my-work-experience-period">July 2021 - up to now <span class="my-work-experience-divider">|</span> Ukraine</p>
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-dutuy">Work on a project with parallel learning.</li>
@@ -84,9 +84,9 @@
                         <li class="my-work-experience-dutuy">Work with HTML, CSS, SASS, JS.</li>
                         <li class="my-work-experience-dutuy">After the courses (01.05.22) I will be able to work with React JS, Node.js and React Native </li>
                         <li class="my-work-experience-dutuy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</li> -->
-                    </ul>
+                <!--  </ul>
                 </div>  
-            </div>
+            </div> 
 
             <!-- my education section -->
             <div class="my-education-sactions">
@@ -161,22 +161,22 @@
                 <li class="skills-item">
                     <span class="skills-item-text">
                         Ukrainian
-                        ................
-                        <span class="my-language-bracket">[</span> C2 <span class="my-language-bracket">]</span>
+                        :
+                        <span class="my-language-bracket">[</span> Proficient User <span class="my-language-bracket">]</span>
                     </span>
                 </li>
                 <li class="skills-item">
                     <span class="skills-item-text">
                         Russian
-                        ....................
-                        <span class="my-language-bracket">[</span> C2 <span class="my-language-bracket">]</span>
+                        :
+                        <span class="my-language-bracket">[</span> Proficient User <span class="my-language-bracket">]</span>
                     </span>
                 </li>
                 <li class="skills-item">
                     <span class="skills-item-text">
                         English
-                        .....................
-                        <span class="my-language-bracket">[</span> B1 <span class="my-language-bracket">]</span>
+                        :
+                        <span class="my-language-bracket">[</span> Intermediate <span class="my-language-bracket">]</span>
                     </span>
                 </li>
                 </ul>
