--- a/index.html
+++ b/index.html
@@ -162,21 +162,21 @@
                     <span class="skills-item-text">
                         Ukrainian
                         :
-                        <span class="my-language-bracket">[</span> Proficient User <span class="my-language-bracket">]</span>
+                        Native 
                     </span>
                 </li>
                 <li class="skills-item">
                     <span class="skills-item-text">
                         Russian
                         :
-                        <span class="my-language-bracket">[</span> Proficient User <span class="my-language-bracket">]</span>
+                        Native
                     </span>
                 </li>
                 <li class="skills-item">
                     <span class="skills-item-text">
                         English
                         :
-                        <span class="my-language-bracket">[</span> Intermediate <span class="my-language-bracket">]</span>
+                        Intermediate
                     </span>
                 </li>
                 </ul>
