add Telegram + mission on progects

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </li>
                 <span class="my-projects-name">GitHub &#10140;
  : <a href="https://github.com/m0h4x/team-proj-demo" class="my-projects-link">Click</a></span>
-                <h4 class="my-project-h"><span class="my-projects-text">My role was a Web developer, the essence of the site for creating ice cream and selling it</span></h4>
+                <h4 class="my-project-h"><span class="my-projects-text">My role was a Web developer, the essence of the site for creating ice cream and selling it, on this project, I made a section on product placement and helped with the section of products</span></h4>
                 <li class="my-projects-item">
                         <span class="my-projects-text">
                             <a href="https://pavlolevchenko.github.io/Filmoteka/" target="_blank" class="my-projects-link">Filmoteka
@@ -66,7 +66,7 @@
                     </li>
                     <span class="my-projects-name">GitHub &#10140;
  : <a href="https://github.com/PavloLevchenko/Filmoteka" class="my-projects-link">Click</a></span>
-                    <h4 class="my-project-h"><span class="my-projects-text">My role was a scrum master, the essence of the site is watching movies, their rating, votes, library</span></h4>
+                    <h4 class="my-project-h"><span class="my-projects-text">My role was a scrum master, the essence of the site is watching movies, their rating, votes, library, on this project I made a footer with the project participants and helped with the modal windows of the movie cards</span></h4>
                 </div>
 
             <!-- my work experience section  -->
@@ -125,6 +125,9 @@
                 </div>
                 <div>
                     <a class="contacts-section-link" href="https://www.linkedin.com/in/stupak-alex/">GitHub</a>
+                </div>
+                <div>
+                    <a class="contacts-section-link" href="https://t.me/AllcesT">Telegram</a>
                 </div>
             </div>
 
