--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
                 </p> -->
                 <h3 class="main-content-title">Summary</h3>
-                <p>I am looking for an interesting job as a front-end developer in a friendly, prosperous and interesting company to
+                <p class="my-projects-text">I am looking for an interesting job as a front-end developer in a friendly, prosperous and interesting company to
                 develop my skills, as well as work in a team, I have already worked in a team and created projects that are from below,
                 I am well versed in HTML/CSS/Node.js</p>
                 
